tree-sitter-axi/test/corpus/propositional-logic.txt
=============
Declarations
=============
proposition P : Prop
proposition Q : Prop
proposition R : Prop

---

(source_file
  (separator)
  (proposition_definition
    (identifier)
    (type
      (identifier)))
  (separator)
  (proposition_definition
    (identifier)
    (type
      (identifier)))
  (separator)
  (proposition_definition
    (identifier)
    (type
      (identifier)))
  (separator))

===========
Assumption
===========
theorem weakening : P --> Q --> P
proof
  assume (p : P)
  assume (q : Q)
  p
qed

theorem assume-two : P --> Q --> P
proof
  assume (p : P) (q : Q)
  p
qed

theorem assume-two-same : P --> P --> P
proof
  assume (p1 p2 : P)
  p1
qed

theorem assume-discard : P --> Q --> P
proof
  assume (p : P) _
  p
qed

theorem assume-no-annotation : P --> Q --> P
proof
  assume p q
  p
qed

theorem no-assume (p : P) (q : Q) : P
proof
  p
qed

theorem assumption-example : P --> Q --> P
proof
  assume p q
  assumption
qed

---

(source_file
  (separator)
  (theorem_definition
    (identifier)
    (type
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (separator)
    (proof
      (begin)
      (separator)
      (assume
        (typed_assumptions
          (identifier)
          (type
            (identifier))))
      (separator)
      (assume
        (typed_assumptions
          (identifier)
          (type
            (identifier))))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_definition
    (identifier)
    (type
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (separator)
    (proof
      (begin)
      (separator)
      (assume
        (typed_assumptions
          (identifier)
          (type
            (identifier)))
        (typed_assumptions
          (identifier)
          (type
            (identifier))))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_definition
    (identifier)
    (type
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (separator)
    (proof
      (begin)
      (separator)
      (assume
        (typed_assumptions
          (identifier)
          (identifier)
          (type
            (identifier))))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_definition
    (identifier)
    (type
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (separator)
    (proof
      (begin)
      (separator)
      (assume
        (typed_assumptions
          (identifier)
          (type
            (identifier)))
        (identifier))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_definition
    (identifier)
    (type
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (separator)
    (proof
      (begin)
      (separator)
      (assume
        (identifier)
        (identifier))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_definition
    (identifier)
    (parameters
      (explicit_parameters
        (identifier)
        (type
          (identifier)))
      (explicit_parameters
        (identifier)
        (type
          (identifier))))
    (type
      (identifier))
    (separator)
    (proof
      (begin)
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_definition
    (identifier)
    (type
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (separator)
    (proof
      (begin)
      (separator)
      (assume
        (identifier)
        (identifier))
      (separator)
      (assumption)
      (end)))
  (separator))

============
Application
:skip
============
theorem impl-elim : (P --> Q) --> P --> Q
proof
  assume pq p
  apply pq p
qed

theorem apply-many-args : (P --> Q --> R) --> (Q --> P --> R)
proof
  assume pqr q p
  apply pqr p q
qed

theorem apply-many-args' : (P --> Q --> R) --> (Q --> P --> R)
proof
  assume pqr q p
  apply (apply pqr p) q
qed

theorem impl-trans : (P --> Q) --> (Q --> R) --> (P --> R)
proof
  assume pq qr p
  apply qr
  apply pq
  p
qed

theorem apply-chaining : (P --> Q) --> (Q --> R) --> (P --> R)
proof
  assume pq qr p
  apply qr, pq
  p
qed

// We can chain many-argument `apply` just like the ordinary one.
theorem impl-dist : (P --> Q --> R) --> ((P --> Q) --> (P --> R))
proof
  assume (pqr : P --> Q --> R) (pq : P --> Q) p
  apply pqr p, pq
  p
qed

---

(source_file)

=================
True, False, Not
:skip
=================
theorem true-intro-example : True
proof
  trivial
qed

theorem false-elim-example : False --> P
proof
  assume e : False
  absurd e
qed

// The negation of `P` is written `~ P`.
// `~ P` is not a primitive, but rather an abbreviation of `P --> False`.
// Negation is therefore proved using `assume`, just like implication.
theorem not-false : ~ False
proof
  assume e
  e
qed

// Negation is eliminated with `apply`, just like implication.
// The below theorem, called `contradiction`, may also be used as an
// eliminator for negation for the purpose of readability.
theorem contradiction : ~ P --> P --> False
proof
  assume (np : ~ P) (p : P)
  apply np p
qed

---

(source_file)

============
Conjunction
:skip
============
theorem and-intro : P --> Q --> P /\ Q
proof
  assume p q
  both p q
qed

theorem tactic-style-bullets-example : P --> Q --> P /\ Q
proof
  assume p q
  both
  - p
  - q
qed

theorem named-blocks-example : P --> Q --> P /\ Q
proof
  assume p q
  both ?x ?y
  lemma x by p
  lemma y by q
qed

// Note that these named blocks don't need to be proved in the order they
// were introduced in the proof. Below, we prove ?q first, even though we
// first introduced ?p.
theorem named-blocks-not-in-order-example : P --> Q --> P /\ Q
proof
  assume p q
  both ?x ?y
  lemma y by q
  lemma x by p
qed

theorem conjunction-elimination-example : P /\ Q --> P
proof
  assume pq
  and-left pq
qed

theorem assume-pattern-matching : P /\ Q --> P
proof
  assume (both p q)
  p
qed

theorem assume-pattern-matching-annotated : P /\ Q --> P
proof
  assume (both p q : P /\ Q)
  p
qed

theorem assume-pattern-matching-annotated-var : P /\ Q --> P
proof
  assume (both (p : P) (q : Q))
  p
qed

theorem and-assoc : (P /\ Q) /\ R --> P /\ (Q /\ R)
proof
  assume (both (both p q) r)
  both p
  both q r
qed

---

(source_file)

==============
Biconditional
:skip
==============
theorem iff-intro : (P --> Q) --> (Q --> P) --> P <--> Q
proof
  assume (pq : P --> Q) (qp : Q --> P)
  both pq qp
qed

theorem iff-elim-r : (P <--> Q) --> (Q --> P)
proof
  assume pq : P <--> Q
  and-right pq
qed

theorem iff-elim-r-pattern-matching : (P <--> Q) --> (Q --> P)
proof
  assume (both pq qp)
  qp
qed

---

(source_file)

============
Disjunction
:skip
============
theorem or-intro-l : P --> P \/ Q
proof
  assume p
  or-left p
qed

theorem or-idempotent : P \/ P --> P
proof
  assume pp
  cases pp (assume p in p) (assume p in p)
qed

theorem or-idempotent' : P \/ P --> P
proof
  assume pp
  cases pp impl-refl impl-refl
qed

theorem or-elim-tactic-style : P \/ Q --> Q \/ P
proof
  assume pq
  cases pq
  - assume p
    or-right p
  - assume q
    or-left q
qed

---

(source_file)

============
Lemma
:skip
============
theorem lemma-example : P \/ P --> P
proof
  assume orpp
  lemma implpp : P --> P by
    assume p
    p
  cases orpp implpp implpp
qed

theorem reverse-lemma : P \/ P --> P
proof
  assume orpp
  cases orpp ?implpp ?implpp
  lemma implpp : P --> P by
    assume p
    p
qed

---

(source_file)

==================
Suffices, proving
:skip
==================
theorem suffices-example : (P --> Q) --> (Q --> R) --> P --> R
proof
  assume pq qr p
  suffices Q by
    apply qr
  suffices P by
    apply pq
  assumption
qed

theorem conclusion-annotation-example : Q -> P \/ (Q \/ R)
proof
  assume q
  proving (P \/ (Q \/ R))
  or-right
  proving (Q \/ R)
  or-left
  proving Q
  assumption
qed

---

(source_file)

=========
Examples
:skip
=========
theorem curry : (P /\ Q --> R) --> P --> Q --> R
proof
  assume pqr p q
  apply pqr
  both p q
qed

theorem uncurry : (P --> Q --> R) --> (P /\ Q --> R)
proof
  assume pqr (both p q)
  apply pqr p q
qed

theorem or-comm : P \/ Q --> Q \/ P
proof
  assume pq
  cases pq
  - assume p
    or-right p
  - assume q
    or-left q
qed

theorem or-comm' : P \/ Q --> Q \/ P
proof
  assume pq
  cases pq or-right or-left
qed

theorem and-comm : P /\ Q --> Q /\ P
proof
  assume pq
  both
  - and-right pq
  - and-left pq
qed

theorem and-comm' : P /\ Q --> Q /\ P
proof
  assume (both p q)
  both q p
qed

theorem impl-or-neg : ~ P \/ Q --> (P --> Q)
proof
  assume (npq : ~ P \/ Q) (p : P)
  cases npq
  - assume np : ~ P
    absurd
    apply contradiction np p
  - assume q : Q
    assumption
qed

theorem noncontradiction : ~ (P /\ ~ P)
proof
  assume (both p np)
  absurd
  apply contradiction np p
qed

theorem contraposition : (P --> Q) --> (~ Q --> ~ P)
proof
  assume pq nq p
  apply nq, pq
  assumption
qed

theorem funny-contraposition : (P --> ~ Q) --> (Q --> ~ P)
proof
  assume pnq q p
  apply pnq p q
qed

theorem iff-elim : ((P --> Q) --> (Q --> P) --> R) --> ((P <--> Q) --> R)
proof
  assume f (both pq qp)
  apply f pq qp
qed

theorem iff-not : (P <--> Q) --> (~ P <--> ~ Q)
proof
  assume (both pq qp)
  both
  - apply contraposition qp
  - apply contraposition pq
qed

theorem resolution : (P \/ Q) /\ (~ P \/ R) --> Q \/ R
proof
  assume (both pq npr)
  cases pq ?pr ?qq
  lemma qq by
    assume q
    or-left q
  lemma pr by
    cases npr
    - assume np
      absurd
      apply contradiction np p
    - assume r
      or-right r
qed

theorem resolution' : (P \/ Q) /\ (~ P \/ R) --> Q \/ R
proof
  assume (both np npr)
  cases pq (assume p in ?pr) (assume q in ?qq)
  lemma qq by
    or-left q
  lemma pr by
    cases npr
    - assume np
      absurd
      apply contradiction np p
    - assume r
      or-right r
qed

theorem not-or-intro : ~ P /\ ~ Q --> ~ (P \/ Q)
proof
  assume (both np nq) npq
  cases npq
  - assume p
    absurd
    apply contradiction np p
  - assume q
    absurd
    apply contradiction nq q
qed

theorem not-or-elim : ~ (P \/ Q) --> ~ P /\ ~ Q
proof
  assume npq : ~ (P \/ Q)
  both
  - assume p
    apply npq
    or-left
    p
  - assume q
    apply npq
    or-right
    q
qed

---

(source_file)
